completato relazioni libro + sanificated con libroexportDto