@@ -7,11 +7,10 @@ import it.objectmethod.Biblioteca.mapper.LibroMapper;
 import it.objectmethod.Biblioteca.param.LibroParams;
 import it.objectmethod.Biblioteca.repository.LibroRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
+import java.io.IOException;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,6 +19,8 @@ public class LibroService {
     private LibroRepository libroRepository;
     @Autowired
     private LibroMapper libroMapper;
+    @Autowired
+    ExcelExportService excelExportService;
 
     public List<LibroDto> getAllLibri() {
         return libroMapper.libriToLibroDto(libroRepository.findAll());
@@ -39,31 +40,44 @@ public class LibroService {
     }
 
     public LibroDto updateLibro(final LibroDto libroDto, final Long id) {
-        Libro libro = libroRepository.getById(id);
-        if (libro == null) {
-            throw new ElementNotFoundException("Libro non trovato");
-        }
+        Libro libro = libroRepository.findById(id).orElseThrow(
+                () -> new ElementNotFoundException("Nessun libro trovato con l'id " + id));
         libroMapper.updateLibro(libro, libroDto);
+        if (libro.getIsbn() == null || !libro.getIsbn().contains(String.valueOf(libro.getAnnoPubblicazione().getValue()))) {
+            throw new ElementNotFoundException("L'isbn del libro non contiene l'anno di pubblicazione");
+        }
         return libroMapper.libroToLibroDto(libroRepository.save(libro));
     }
 
 
     /**
-     * Cancella i libri che non hanno isbn o che non contengono l'anno di pubblicazione
-     * nell'isbn.
+     * Cancella i libri che non hanno ISBN o che non contengono l'anno di pubblicazione
+     * nell'ISBN e crea un backup in Excel prima della sanificazione.
      */
     public void sanitizeLibriByIsbn() {
         // Recupera tutti i libri dal database
         List<Libro> libri = libroRepository.findAll();
-        // Filtra i libri che non hanno isbn o che non contengono l'anno di pubblicazione
-        // nell'isbn
+
+        try {
+            // Esporta tutti i dati dei libri in un file Excel come copia di backup
+            excelExportService.exportLibrosToExcel();
+            System.out.println("Backup dei libri eseguito con successo.");
+        } catch (IOException e) {
+            System.err.println("Errore durante l'esportazione dei libri: " + e.getMessage());
+            return; // Esci se non è possibile effettuare il backup
+        }
+
+        // Filtra i libri che non rispettano le condizioni
         List<Libro> libriToDelete = libri.stream()
-                .filter(libro -> libro.getIsbn() == null || !libro.getIsbn().contains(
-                        String.valueOf(libro.getAnnoPubblicazione().getValue())))
-                .collect(Collectors.toList());
-        // Elimina i libri che non soddisfano le condizioni
-        libriToDelete.forEach(libro -> libroRepository.delete(libro));
+                .filter(libro -> libro.getIsbn() == null ||
+                        !libro.getIsbn().contains(String.valueOf(libro.getAnnoPubblicazione().getValue())))
+                .toList();
+
+        // Elimina i libri non validi
+        libroRepository.deleteAll(libriToDelete);
+
         // Stampa il numero di libri eliminati
         System.out.println("Libri non validi eliminati: " + libriToDelete.size());
     }
+
 }
